Fix horizontal scrollbar appearing when vertical scrollbar appeared

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ a.active {
 body {
   margin: 0;
   display: flex;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   color: var(--foreground-color);
   background-color: #ffffff;
